[gd_scene load_steps=3 format=2]

[ext_resource path="res://star-shooter/assets/player-life.png" type="Texture" id=1]
[ext_resource path="res://star-shooter/scripts/LivesSprites.gd" type="Script" id=2]

[node name="LivesSprites" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 40, 96 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 80, 96 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 120, 95 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 160, 96 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 200, 95 )
texture = ExtResource( 1 )
